--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://tophub.today/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://www.126yun.cn/uploads/images/jinrirebang.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/hot.jpg" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>今日热榜</strong></a>
 				   <p class="overflowClip_2">今日热榜提供各站热榜聚合，追踪全网热点、简单高效阅读</p>
@@ -307,7 +307,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://aliyundrive.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/alpan.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/alp.jpg" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>阿里云盘</strong></a>
 				   <p class="overflowClip_2">基于阿里云多年技术沉淀，为用户提供更优异的个人云体验</p>
@@ -318,7 +318,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://pan.baidu.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/bdy.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/bdy.jpg" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>百度网盘</strong></a>
 				   <p class="overflowClip_2">百度网盘，让美好永远陪伴</p>
@@ -329,7 +329,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mail.qq.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/qqm.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/qqm.jpg" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>QQ邮箱</strong></a>
 				   <p class="overflowClip_2">QQ邮箱，常联系！</p>
@@ -362,7 +362,7 @@
 			   <div class="col-sm-3">
 				  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://bbs.tampermonkey.net.cn/&quot;,&quot;_blank&quot;)" >
 				   <div class="xe-comment-entry">
-					<a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/0.ico" class="img-circle" width="40" /></a>
+					<a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/youhou.png" class="img-circle" width="40" /></a>
 					<div class="xe-comment">
 					 <a href="#" class="xe-user-name overflowClip_1"><strong>油猴中文网</strong></a>
 					 <p class="overflowClip_2">油猴脚本分享交流的论坛</p>
@@ -381,7 +381,18 @@
 					 </div>
 					</div> 
 				   </div>
-			   <div class="col-sm-3">
+				   <div class="col-sm-3">
+					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://soft.tinybad.cn/&quot;,&quot;_blank&quot;)" >
+					 <div class="xe-comment-entry">
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/download.png" class="img-circle" width="40" /></a>
+					  <div class="xe-comment">
+					   <a href="#" class="xe-user-name overflowClip_1"><strong> 三点软件下载</strong></a>
+					   <p class="overflowClip_2">一款直接从官方下载软件的工具</p>
+					  </div>
+					 </div>
+					</div>
+				   </div>
+			   <!-- <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://jiling.ink/wkll.php/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
 				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/0.ico" class="img-circle" width="40" /></a>
@@ -391,7 +402,7 @@
 				  </div>
 				 </div>
 				</div>
-			   </div>
+			   </div> -->
 		   <div class="col-sm-3">
 			  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://192.168.2.1/&quot;,&quot;_blank&quot;)">
 			   <div class="xe-comment-entry">
@@ -439,7 +450,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.549.tv/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/dh.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/yysl.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>影视森林</strong></a>
 				   <p class="overflowClip_2">观影第一站</p>
@@ -475,7 +486,7 @@
 
 			<h4 class="text-gray"><i class="linecons-tag" style="margin-right:7px" id="学无止境"></i>学无止境</h4>
 			<div class="row">
-                <div class="col-sm-3">
+                <!-- <div class="col-sm-3">
                  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://211.67.81.80/jwweb/index.aspx&quot;,&quot;_blank&quot;)" >
                   <div class="xe-comment-entry">
                    <a class="xe-user-img"><img src="https://tvax1.sinaimg.cn/crop.0.0.512.512.180/eb4b68b3ly8gdj1u3j5eyj20e80e8aao.jpg?KID=imgbed,tva&Expires=1605445613&ssig=NMedm3b8vM" class="img-circle" width="40" /></a>
@@ -496,7 +507,7 @@
                    </div>
                   </div>
                  </div>
-				</div>
+				</div> -->
 				<div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://dxx.wwwtop.top/dxx_answer&quot;,&quot;_blank&quot;)" >
                      <div class="xe-comment-entry">
@@ -577,7 +588,7 @@
 					 </div>
 					</div>
 				   </div>
-			   <div class="col-sm-3">
+			   <!-- <div class="col-sm-3">
                  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://bm.scs.gov.cn/pp/gkweb/core/web/ui/business/home/gkhome.html&quot;,&quot;_blank&quot;)" >
                   <div class="xe-comment-entry">
                    <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/beian.png" class="img-circle" width="40" /></a>
@@ -587,7 +598,7 @@
                    </div>
                   </div>
                  </div>
-                </div>
+                </div> -->
 				<div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://sls.cdb.com.cn&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
@@ -750,7 +761,7 @@
 				<div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://airportal.cn/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/shangzhenyang/assets/img/ap-apple-touch-icon-2.png" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/ap.png" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>AirPortal  |  空投</strong></a>
 					   <p class="overflowClip_2">简单的文件分享工具</p>
@@ -772,7 +783,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://pan.baidu.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/bdy.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/bdy.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>百度网盘</strong></a>
 					   <p class="overflowClip_2">百度网盘，让美好永远陪伴</p>
@@ -1147,7 +1158,7 @@
 		   <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.549.tv/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/0.ico" class="img-circle" width="40" /></a>
+			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/yysl.png" class="img-circle" width="40" /></a>
 			  <div class="xe-comment">
 			   <a href="#" class="xe-user-name overflowClip_1"><strong>影视森林</strong></a>
 			   <p class="overflowClip_2">观影第一站</p>
@@ -1255,17 +1266,6 @@
 		  <div class="xe-comment">
 		   <a href="#" class="xe-user-name overflowClip_1"><strong>正版中国</strong></a>
 		   <p class="overflowClip_2">正版软件限时免费</p>
-		  </div>
-		 </div>
-		</div>
-	   </div>
-	   <div class="col-sm-3">
-		<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.cheat8.com/&quot;,&quot;_blank&quot;)" >
-		 <div class="xe-comment-entry">
-		  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/qtb.ico" class="img-circle" width="40" /></a>
-		  <div class="xe-comment">
-		   <a href="#" class="xe-user-name overflowClip_1"><strong>奇特吧</strong></a>
-		   <p class="overflowClip_2">小刀娱乐网、免费辅助、稳定辅助、资源分享网</p>
 		  </div>
 		 </div>
 		</div>
@@ -2552,7 +2552,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://vercel.com/&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest@master/img/logo/vercel.svg" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest@master/img/logo/vercel.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>Vercel</strong></a>
 				   <p class="overflowClip_2">静态页面托管平台</p>
@@ -2563,7 +2563,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://console.cloud.tencent.com/&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest@master/img/logo/txy.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest@master/img/logo/txy.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>腾讯云</strong></a>
 				   <p class="overflowClip_2">腾讯云-控制台</p>
