--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mail.qq.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://mail.qq.com/zh_CN/htmledition/images/favicon/qqmail_favicon_96h.png" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/qqm.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>QQ邮箱</strong></a>
 					   <p class="overflowClip_2">QQ邮箱，常联系！</p>
@@ -1229,7 +1229,7 @@
 	 <div class="col-sm-3">
 		<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://soft.tinybad.cn/&quot;,&quot;_blank&quot;)" >
 		 <div class="xe-comment-entry">
-		  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/0.ico" class="img-circle" width="40" /></a>
+		  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/download.png" class="img-circle" width="40" /></a>
 		  <div class="xe-comment">
 		   <a href="#" class="xe-user-name overflowClip_1"><strong> 三点软件下载</strong></a>
 		   <p class="overflowClip_2">一款直接从官方下载软件的工具</p>
@@ -2552,7 +2552,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://vercel.com/&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest@master/img/logo/vercel.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/vercel.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>Vercel</strong></a>
 				   <p class="overflowClip_2">静态页面托管平台</p>
@@ -2563,7 +2563,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://console.cloud.tencent.com/&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest@master/img/logo/txy.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/txy.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>腾讯云</strong></a>
 				   <p class="overflowClip_2">腾讯云-控制台</p>
