--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <html lang="zh">
 <head>
-  
+  <!-- 百度统计
 	<script>
 	 var _hmt = _hmt || [];
 	(function() {
@@ -23,7 +23,7 @@
 	  var s = document.getElementsByTagName("script")[0]; 
 	  s.parentNode.insertBefore(hm, s);
 	})();
-	</script>
+	</script> -->
     <script src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/jquery-1.11.1.min.js"></script>
 
     <meta charset="utf-8">
