--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	})();
 	</script> -->
     <script src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/jquery-1.11.1.min.js"></script>
-
+	<script src="https://gcore.jsdelivr.net/gh/PipecraftNet/jsdelivr-auto-fallback@main/index.min.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
