--- a/index.html
+++ b/index.html
@@ -371,6 +371,17 @@
 				  </div>
 				 </div> 
 				<div class="col-sm-3">
+				   <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://js-delivr-cdn-purge.vercel.app/&quot;,&quot;_blank&quot;)" >
+					 <div class="xe-comment-entry">
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/0.ico" class="img-circle" width="40" /></a>
+					  <div class="xe-comment">
+					   <a href="#" class="xe-user-name overflowClip_1"><strong>jsDelivr Tool</strong></a>
+					   <p class="overflowClip_2">jsDelivr 缓存刷新小工具</p>
+					  </div>
+					 </div>
+					</div> 
+				   </div>
+<!-- 				<div class="col-sm-3">
 				   <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.html22.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
 					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/0.ico" class="img-circle" width="40" /></a>
@@ -380,7 +391,7 @@
 					  </div>
 					 </div>
 					</div> 
-				   </div>
+				   </div> -->
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://soft.tinybad.cn/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
@@ -749,6 +760,17 @@
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>wikiHow</strong></a>
 					   <p class="overflowClip_2">你可以信赖的万事指南</p>
+					  </div>
+					 </div>
+					</div>
+				   </div>
+				   <div class="col-sm-3">
+					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.right.com.cn/forum/&quot;,&quot;_blank&quot;)" >
+					 <div class="xe-comment-entry">
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/enshan.png" class="img-circle" width="40" /></a>
+					  <div class="xe-comment">
+					   <a href="#" class="xe-user-name overflowClip_1"><strong>恩山</strong></a>
+					   <p class="overflowClip_2">恩山无线论坛、无线路由器爱好者的圣地</p>
 					  </div>
 					 </div>
 					</div>
@@ -2720,7 +2742,7 @@
                     <!-- Add your copyright text here -->
                     <div class="footer-text">
                         &copy; 2017-2022
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="https://jintaovo.cn/" target="_blank"><strong>Viggo</strong> | used by <strong>Jintaovo</strong></a> 
+                        <a href="https://jintaovo.cn/"><strong>WebStack</strong></a> design by <a href="https://jintaovo.cn/" target="_blank"><strong>Viggo</strong> | used by <strong>Jintaovo</strong></a> 
 						<!-- <a href="https://blog.jintaovo.cn"><strong>返回博客</strong></a> -->
                         <!--  - Purchase for only <strong>23$</strong> -->
                     </div>
