--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	<link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/myfont.min.css">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/load.min.css"> 
 	<!-- <link rel="stylesheet" href="..\cdn\box/assets/css/xenon-core3.css">  -->
-
+	<!-- <link rel="stylesheet" href="..\cdn\box/assets/css/nav.css">  -->
+	<!-- <link rel="stylesheet" href="..\cdn\box/assets/css/bootstrap.css">  -->
     <!-- <meta property="og:type" content="article">
     <meta property="og:url" content="http://jintaovo.cn/">
     <meta property="og:title" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn">
@@ -437,12 +438,12 @@
 			</div>
 		   </div>
 		   <div class="col-sm-3">
-			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://wwa.lanzoui.com/b00uiaawb&quot;,&quot;_blank&quot;)">
+			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://filehelper.weixin.qq.com/&quot;,&quot;_blank&quot;)">
 			 <div class="xe-comment-entry">
 			  <a class="xe-user-img"><img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo/file.jpg" class="img-circle" width="40" /></a>
 			  <div class="xe-comment">
-			   <a href="#" class="xe-user-name overflowClip_1"><strong>共享文件夹</strong></a>
-			   <p class="overflowClip_2">个人内容分享文件夹</p>
+			   <a href="#" class="xe-user-name overflowClip_1"><strong>微信文件传输</strong></a>
+			   <p class="overflowClip_2">手机电脑轻松互传文件</p>
 			  </div>
 			 </div>
 			</div>
