--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <!-- logo -->
                     <div class="logo">
                         <a href="https://so.jintaovo.cn" class="logo-expanded">
-                            <img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo.png" width="110%" alt="" />
+                            <img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logo1.png" width="110%" alt="" />
 						</a>
 						<!-- <span id="site_name"> Jintaovo <span></span> -->
                         <a href="https://jintaovo.cn" class="logo-collapsed">
