--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>Jintaovo-导航</title>
+    <title>导航丨Jintaovo</title>
 	<link rel="icon" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/tubiao.png" type="image/x-icon">
     <meta name="keywords" content="jintaovo.cn,UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航">
     <meta name="description" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn">
@@ -196,18 +196,18 @@
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://jintaovo.cn/shuoshuo.html" target="_self">
-                            <i class="fa-pencil"></i>  我的说说
+                        <a href="https://so.jintaovo.cn/talk.html" target="_self">
+                            <i class="fa fa-comments"></i>  评论留言
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://blog.jintaovo.cn/link" target="_self">
+                        <a href="https://so.jintaovo.cn/link.html" target="_self">
                             <i class="fa-link"></i>  友情链接
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://blog.jintaovo.cn/comments" target="_self">
-                            <i class="fa fa-comments"></i>  评论留言
+                        <a href="https://so.jintaovo.cn/about.html" target="_self">
+                            <i class="fa-info"></i>  关于本站
                         </a>
                     </li>
                 </ul>
