--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/xenon-components.css">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/xenon-skins.css">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/nav.css">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/load.min.css">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/bokee.min.css">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/myfont.min.css">
     <script src="../cdn/box/https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/jquery-1.11.1.min.js"></script>
+
   
     <script>
     var _hmt = _hmt || [];
