--- a/talk.html
+++ b/talk.html
@@ -139,20 +139,25 @@
                                     </blockquote>
                                 </div>
                             </div>
+                    <br>
+                    <br>
+                    <h4 class="text-gray">留言区</h4>
+                    <br>
+                            <div id="waline"></div>
+  <script>
+    Waline.init({
+      el: '#waline',
+      serverURL: 'https://talk.jintaovo.cn',
+    });
+  </script>
                             <!-- 关于站长 -->
 
                         </div>
                     </div>
                 </div>
+
             </div>
 
-            <div id="waline"></div>
-  <script>
-    Waline.init({
-      el: '#waline',
-      serverURL: 'https://comment-dun.vercel.app',
-    });
-  </script>
             <!-- Main Footer -->
             <footer class="main-footer sticky footer-type-1 fixed">
                 <div class="footer-inner">
