--- a/talk.html
+++ b/talk.html
@@ -64,7 +64,7 @@
                 <ul class="user-info-menu left-links list-inline list-unstyled">
                     <li class="tb">
                          <a href="https://so.jintaovo.cn" >
-                            <img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/tubiao.png" />
+                            <img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logob.png" />
                         </a>
                     </li>
                     <li class="hidden-sm hidden-xs">
