--- a/bb.html
+++ b/bb.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/nav.css">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/load.min.css">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/bokee.min.css">
-    <!-- <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/myfont.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/index/css/shuoshuo.css"> -->
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/myfont.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@latest/index/css/shuoshuo.css">
     <!-- <link rel="stylesheet" href="..\cdn\index/css/shuoshuo.css"> -->
     <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/jquery-1.11.1.min.js"></script>
 
