--- a/about.html
+++ b/about.html
@@ -9,19 +9,19 @@
     <title>关于本站丨Jintaovo</title>
     <meta name="keywords" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
     <meta name="description" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
-    <link rel="shortcut icon" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/avatar.png">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/avatar.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/fonts/linecons/css/linecons.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/fonts/fontawesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/xenon-core4.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/xenon-components.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/xenon-skins.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/css/nav.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/load.min.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/bokee.min.css">
-    <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/css/myfont.min.css">
-    <script src="../cdn/box/https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/fonts/linecons/css/linecons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/fonts/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/xenon-core4.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/xenon-components.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/xenon-skins.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/nav.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/load.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/bokee.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/css/myfont.min.css"> -->
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/jquery-1.11.1.min.js"></script>
 
   
     <script>
@@ -59,7 +59,7 @@
                 <ul class="user-info-menu left-links list-inline list-unstyled">
                     <li class="tb">
                          <a href="https://so.jintaovo.cn" >
-                            <img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/img/logob.png" />
+                            <img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logob.png" />
                         </a>
                     </li>
                     <li class="hidden-sm hidden-xs">
@@ -145,7 +145,7 @@
                                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.viggoz.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.viggoz.com/">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
-                                                <img src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/images/logos/viggoz.png" class="img-circle" width="40">
+                                                <img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logos/viggoz.png" class="img-circle" width="40">
                                             </a>
                                             <div class="xe-comment">
                                                 <a href="#" class="xe-user-name overflowClip_1">
@@ -193,14 +193,14 @@
         </div>
     </div>
     <!-- Bottom Scripts -->
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/bootstrap.min.js"></script>
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/TweenMax.min.js"></script>
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/resizeable.js"></script>
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/joinable.js"></script>
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/xenon-api.js"></script>
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/xenon-toggles.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/TweenMax.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/resizeable.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/joinable.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/xenon-api.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/xenon-toggles.min.js"></script>
     <!-- JavaScripts initializations and stuff -->
-    <script src="https://fastly.jsdelivr.net/gh/Jintaovo/cdn@latest/box/assets/js/xenon-custom.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/js/xenon-custom.min.js"></script>
     <textarea tabindex="-1" style="position: absolute; top: -999px; left: 0px; right: auto; bottom: auto; border: 0px; padding: 0px; box-sizing: content-box; word-wrap: break-word; overflow: hidden; transition: none; height: 0px !important; min-height: 0px !important; font-family: Arimo, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; font-weight: 400; font-style: normal; letter-spacing: 0px; text-transform: none; word-spacing: 0px; text-indent: 0px; line-height: 18.5714px; width: 53px;" class="autosizejs" id="autosizejs"></textarea>
 </body>
 
