--- a/link.html
+++ b/link.html
@@ -57,7 +57,7 @@
                 <!-- Left links for user info navbar -->
                 <ul class="user-info-menu left-links list-inline list-unstyled">
                     <li class="tb">
-                         <a href="https://so.jintaovo.cn" >
+                         <a href="index.html" >
                             <img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logob.png" />
                         </a>
                     </li>
@@ -67,17 +67,17 @@
                         </a>
                     </li>
                     <li class="hidden-sm hidden-xs">
-                        <a href="https://so.jintaovo.cn/talk.html" target="_self">
+                        <a href="talk.html" target="_self">
                             <i class="fa fa-comments"></i>  评论留言
                         </a>
                     </li>
                     <li class="hidden-sm hidden-xs">
-                        <a href="https://so.jintaovo.cn/link.html" target="_self">
+                        <a href="link.html" target="_self">
                             <i class="fa-link"></i>  友情链接
                         </a>
                     </li>
                     <li class="hidden-sm hidden-xs">
-                        <a href="https://so.jintaovo.cn/about.html" target="_self">
+                        <a href="about.html" target="_self">
                             <i class="fa-info"></i>  关于本站
                         </a>
                     </li>
