--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <header class="logo-env">
                     <!-- logo -->
                     <div class="logo">
-                        <a href="https://so.jintaovo.cn" class="logo-expanded">
+                        <a href="index.html" class="logo-expanded">
                             <img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logo1.png" width="110%" alt="" />
 						</a>
 						<!-- <span id="site_name"> Jintaovo <span></span> -->
-                        <a href="https://jintaovo.cn" class="logo-collapsed">
+                        <a href="index.html" class="logo-collapsed">
                             <img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/avatar2.png" width="50%" alt="" />
                         </a>
                     </div>
@@ -196,17 +196,17 @@
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://so.jintaovo.cn/talk.html" target="_self">
+                        <a href="talk.html" target="_self">
                             <i class="fa fa-comments"></i>  评论留言
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://so.jintaovo.cn/link.html" target="_self">
+                        <a href="link.html" target="_self">
                             <i class="fa-link"></i>  友情链接
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://so.jintaovo.cn/about.html" target="_self">
+                        <a href="about.html" target="_self">
                             <i class="fa-info"></i>  关于本站
                         </a>
                     </li>
