--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
 			</div>
 		   </div>
 		   <div class="col-sm-3">
-			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://ddrk.me/&quot;,&quot;_blank&quot;)" >
+			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://ddys.tv/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
 			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logo/dd.png" class="img-circle" width="40" /></a>
 			  <div class="xe-comment">
