--- a/index.html
+++ b/index.html
@@ -778,6 +778,17 @@
 					 </div>
 					</div>
 				   </div>
+				<div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.txrjy.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logo/txr.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>通信人家园</strong></a>
+				   <p class="overflowClip_2">通信人的精神家园</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
 		</div>
 		<br />
 			
