--- a/index.html
+++ b/index.html
@@ -1513,6 +1513,17 @@
 			 </div>
 			</div>
 		   </div>
+		 <div class="col-sm-3">
+			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.heishenhua.com/&quot;,&quot;_blank&quot;)" >
+			 <div class="xe-comment-entry">
+			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/nav/assets/images/logo/hsh.ico" class="img-circle" width="40" /></a>
+			  <div class="xe-comment">
+			   <a href="#" class="xe-user-name overflowClip_1"><strong>黑神话·悟空</strong></a>
+			   <p class="overflowClip_2">西游题材·单机·动作·角色扮演游戏</p>
+			  </div>
+			 </div>
+			</div>
+		   </div>
 	</div> 
 	<br />
 		  
