--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@
   			 </div>
 
 				<div class="col-sm-3">
-				   <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://js-delivr-cdn-purge.vercel.app/&quot;,&quot;_blank&quot;)" >
+				   <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://7bu.top/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7267c78.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c7964ba5cf.ico" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
-					   <a href="#" class="xe-user-name overflowClip_1"><strong>jsDelivr Tool</strong></a>
-					   <p class="overflowClip_2">jsDelivr 缓存刷新小工具</p>
+					   <a href="#" class="xe-user-name overflowClip_1"><strong>去不图床</strong></a>
+					   <p class="overflowClip_2">杜老师说旗下付费图片外链平台</p>
 					  </div>
 					 </div>
 					</div> 
