--- a/index.html
+++ b/index.html
@@ -789,6 +789,17 @@
 				 </div>
 				</div>
 			   </div>
+				 <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://twitter.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630ca6e94ed17.jpg" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>Twitter</strong></a>
+				   <p class="overflowClip_2">Twitter. It's what's happening</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
 		</div>
 		<br />
 			
@@ -1505,7 +1516,7 @@
 		   <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://liferestart.syaro.io/view/&quot;,&quot;_blank&quot;)" "bigesj.com">
 			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7267c78.ico" class="img-circle" width="40" /></a>
+			  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630ca5a8a29e8.ico" class="img-circle" width="40" /></a>
 			  <div class="xe-comment">
 			   <a href="#" class="xe-user-name overflowClip_1"><strong>Life Restart</strong></a>
 			   <p class="overflowClip_2">人生重开模拟器-这垃圾人生一秒也不想呆了</p>
