--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 				<div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://i.chaoxing.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7dc1f72.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc15d8c0e8.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>超星</strong></a>
 					   <p class="overflowClip_2">提供中小学一站式资源服务解决方案;涵盖电子书、选修课、名师视频、题库、文档等海量资源</p>
@@ -594,7 +594,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.cnki.net/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7c769be.png" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc159a4c1b.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>中国知网</strong></a>
 					   <p class="overflowClip_2">知识发现网络平台—面向海内外读者提供中国学术文献、外文文献、学位论文、报纸、会议、年鉴、工具书等各类资源统一检索、统一导航、在线阅读和下载服务</p>
@@ -679,7 +679,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.douban.com/explore/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c815fd06.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc3ac570e5.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>豆瓣</strong></a>
 					   <p class="overflowClip_2">豆瓣·浏览发现</p>
@@ -691,7 +691,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.hupu.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c8a980af.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc15a8bfcf.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>虎扑</strong></a>
 					   <p class="overflowClip_2">一个认真而有趣的社区,每天有众多JRs在虎扑分享自己对篮球、足球、游戏电竞、运动装备、影视、汽车、数码、情感等一切人和事的见解,热闹、真实、有温度。</p>
@@ -874,7 +874,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mail.163.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0caca6e56.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc15cdb70e.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>网易邮箱</strong></a>
 					   <p class="overflowClip_2">网易163免费邮箱--中文邮箱第一品牌</p>
@@ -1491,6 +1491,50 @@
 		   </div>
 		  </div>
 		 </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.blizzardgames.cn/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc159a4eb2.jpg" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>暴雪游戏</strong></a>
+				   <p class="overflowClip_2">永远致力于创造最伟大的娱乐体验</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.origin.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc15b43209.ico" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>EA Origin</strong></a>
+				   <p class="overflowClip_2">美国艺电公司(EA)旗下PC游戏平台</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://steampp.net/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc15bcce8b.ico" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>Watt Toolkit</strong></a>
+				   <p class="overflowClip_2">原Steam++，一个开源跨平台的多功能游戏工具箱</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://uu.163.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc15c5346d.ico" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>网易UU加速器</strong></a>
+				   <p class="overflowClip_2">全球专线加速，玩出超快感</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
 		 <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yikm.net/&quot;,&quot;_blank&quot;)" "bigesj.com">
 			 <div class="xe-comment-entry">
