--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.chsi.com.cn/&quot;,&quot;_blank&quot;)" >
 					<div class="xe-comment-entry">
-						<a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0cae71f6e.ico" class="img-circle" width="40" /></a>
+						<a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc5e0aaf39.jpg" class="img-circle" width="40" /></a>
 						<span class="label label-info" data-toggle="tooltip" data-placement="left" data-original-title="Hello I am a Tooltip"></span>
 						<div class="xe-comment">
 						<a href="#" class="xe-user-name overflowClip_1"><strong>学信网</strong></a>
@@ -668,7 +668,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://tieba.baidu.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c7662e79.png" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc4a91a03b.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>百度贴吧</strong></a>
 					   <p class="overflowClip_2">全球最大的中文社区</p>
@@ -748,7 +748,7 @@
 				   <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.smzdm.com/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0ca1e06de.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc50277d10.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>什么值得买</strong></a>
 					   <p class="overflowClip_2">认真生活，好好花钱</p>
