--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 				 <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://yz.chsi.com.cn/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0cafb7d61.ico" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc7875a171.jpg" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>研招网</strong></a>
 					   <p class="overflowClip_2">中国研究生招生信息网</p>
@@ -1050,7 +1050,7 @@
 		<div class="col-sm-3">
 		  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.ixigua.com/&quot;,&quot;_blank&quot;)">
 		   <div class="xe-comment-entry">
-			<a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0cade2790.ico" class="img-circle" width="40" /></a>
+			<a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc7875a0e6.jpg" class="img-circle" width="40" /></a>
 			<div class="xe-comment">
 			 <a href="#" class="xe-user-name overflowClip_1"><strong>西瓜视频</strong></a>
 			 <p class="overflowClip_2">高清免费在线视频，点亮对生活的好奇心</p>
@@ -1117,7 +1117,7 @@
 		   <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.kuwo.cn/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c9073a12.ico" class="img-circle" width="40" /></a>
+			  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc78834991.jpg" class="img-circle" width="40" /></a>
 			  <div class="xe-comment">
 			   <a href="#" class="xe-user-name overflowClip_1"><strong>酷我音乐</strong></a>
 			   <p class="overflowClip_2">无损音质正版在线试听网站</p>
