--- a/index.html
+++ b/index.html
@@ -2715,7 +2715,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://kim.plopco.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630c0c8fe63dd.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://bu.dusays.com/2022/08/29/630cc9a72ba7f.jpg" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>KIM主页</strong></a>
 				   <p class="overflowClip_2">主页从未如此惊艳</p>
